--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/017/397/866/non_2x/smart-study-or-tech-study-template-logo-design-premium-part-3-vector.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My Future</title>
+        <title>QT learning</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
