--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="../client/src/assets/img/QT_E4.png" />
+        <link rel="icon" type="image/svg+xml" href="./QT_E5 copy.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>QT learning</title>
+        <title>Fast Elearning</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
